many-to-one example on multiple xias works

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,17 @@ lib_deps =
   nanopb/Nanopb@0.4.8
 extra_scripts = pre:prebuild.py
 
+[env:esp32-printmacaddress]
+platform = espressif32 @ 4.4.0
+extends = env
+board = esp32dev
+build_src_filter = -<*> -<*common*> +<esp32-printmacaddress/>
+
+[env:xiao-printmacaddress]
+extends = xiao-common
+build_src_filter = -<*> -<*common*> +<esp32-printmacaddress/>
+
+
 [esp32common]
 extends = env
 board = esp32-s3-devkitc-1
@@ -120,6 +131,19 @@ build_src_filter = -<*> +<m5core2-multi-receiver/>
 lib_deps =
   ${esp32common.lib_deps}
   m5stack/M5Unified@^0.1.6
+
+[env:esp32-multi-receiver]
+extends = esp32common
+board = esp32dev
+build_src_filter = -<*> +<esp32-multi-receiver/>
+lib_deps =
+  ${esp32common.lib_deps}
+
+[env:xiao-multi-receiver]
+extends = xiao-common
+build_src_filter = -<*> +<esp32-multi-receiver/>
+lib_deps =
+  ${esp32common.lib_deps}
 
 
 
